force-app/main/default/objects/Favorite1__c/Favorite1__c.object-meta.xml
<CustomObject>
    <description>Original name: Favorite
Changes to : Favorite1</description>
    <label>Favorite1</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Favorite1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1_Favorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>