force-app/main/default/objects/Favorite1__c/fields/Contactes__c.field-meta.xml
<CustomField>
    <fullName>Contactes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Favorities</relationshipName>
    <type>Lookup</type>
</CustomField>