force-app/main/default/objects/Favorite1__c/fields/Favorite1__c.field-meta.xml
<CustomField>
    <fullName>Favorite1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favorite1</label>
    <referenceTo>Favorite1__c</referenceTo>
    <relationshipLabel>1_Favorities</relationshipLabel>
    <relationshipName>X1_Favorities</relationshipName>
    <type>Lookup</type>
</CustomField>